# godoo

./: .gitignore  Dockerfile  SETUP.md  USAGE.md  __init__.py  app.py  conf.toml  dlv.sh  docker-compose.yml  dockerfile  entrypoint.sh  go.mod  go.sum  godoo.py  pyproject.toml  run.sh
config/: odoo.conf
etc/: odoo.conf  requirements.txt
godoo_project/: main.go
nginx-config/: nginx.conf
odoo-config/: odoo.conf
