[tool.poetry]
name = "godoo"
version = "0.1.0"
description = ""
authors = ["Abderrahim Guennoune <aguennoune@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
psycopg2-binary = "^2.8.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
