[tool.poetry]
name = "godoo"
version = "0.1.0"
description = ""
authors = ["Abderrahim Guennoune <aguennoune@outlook.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
psycopg2-binary = "^2.8.6"
typer = "^0.9.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
